--- a/app/templates/app/contact.html
+++ b/app/templates/app/contact.html
@@ -12,6 +12,16 @@
     91010-1010
 </address>
 
+<div>
+    <h1>Integrantes:</h1><br/>
+    <p>Henrique Lima.</p>
+    <p>Lucas Medina.</p>
+    <p>Luan de Oliveira.</p>
+    <p>Wesley Barbosa.</p>
+    <p>Douglas Garcia.</p>
+    <p>Everton Alauk.</p>
+</div>
+
 <address>
     <strong>Suporte:</strong>   <a href="mailto:Suporte@example.com">Suporte@example.com</a><br />
     <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
