--- a/app/templates/app/about.html
+++ b/app/templates/app/about.html
@@ -7,4 +7,15 @@
 
 <p>Esta aplicação gerencia vestibulares.</p>
 
+<div>
+    <h1>Integrantes:</h1><br/>
+    <p>Henrique Lima.</p>
+    <p>Lucas Medina.</p>
+    <p>Luan de Oliveira.</p>
+    <p>Wesley Barbosa.</p>
+    <p>Douglas Garcia.</p>
+    <p>Everton Alauk.</p>
+</div>
+
+
 {% endblock %}
