--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -26,7 +26,7 @@
         <p>Crie os vestibulares que o sistema irá gerenciar.</p>
         <!-- <p><a class="btn btn-default" href=" url 'criacao_vestibulares' ">Acessar &raquo;</a></p> -->
      <p>
-        <a class="btn btn­default" href="{% url 'cadastro_vestibulares' %}">
+        <a class="btn btn-default" href="{% url 'cadastro_vestibulares' %}">
             Acessar &raquo;
         </a>
     </p>
@@ -36,7 +36,11 @@
         <h2>Inscrição de candidatos</h2>
         <p>Inscreva candidatos nos vestibulares e consulte as inscrições em cada curso.</p>
         <!-- <p><a class="btn btn-default" href=" url 'inscricao_vestibulares' ">Acessar &raquo;</a></p> -->
-        <p><a class="btn btn-default">Em construção &raquo;</a></p>
+        <p>
+            <a class="btn btn-default" href="{% url 'cadastro_candidato' %}">
+                Acessar &raquo;
+            </a>
+        </p>
     </div>
 </div>
 
