--- a/app/templates/app/cadastro_candidato.html
+++ b/app/templates/app/cadastro_candidato.html
@@ -8,7 +8,7 @@
 <table class="table">
     <tr><th>Nome do candidato</th></tr>
     {% for candidato in vestibulares %}
-    <tr><td>{{ candidato.nome }}</td></tr>
+    <tr><td>{{ candidato.nome_completo }}</td></tr>
     {% endfor %}
 </table>
 {% endblock %}
