--- a/app/templates/app/cadastro_candidato.html
+++ b/app/templates/app/cadastro_candidato.html
@@ -7,7 +7,7 @@
 
 <table class="table">
     <tr><th>Nome do candidato</th></tr>
-    {% for candidato in vestibulares %}
+    {% for candidato in candidatos %}
     <tr><td>{{ candidato.nome_completo }}</td></tr>
     {% endfor %}
 </table>
